==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Improved the error handling for a race condition to make sure it doesn't
  cause queries to get stuck.

- Improved the behaviour in case the cluster drops below the number of minimum
  nodes. The root REST endpoint will no longer timeout and ``sys.checks`` can
  still be queried, similar to how ``sys.nodes`` can still be queried.