@@ -25,13 +25,21 @@ package io.crate.execution.engine.collect.collectors;
 
 import com.google.common.util.concurrent.MoreExecutors;
 import io.crate.analyze.OrderBy;
-import io.crate.metadata.Reference;
+import io.crate.breaker.RamAccountingContext;
+import io.crate.breaker.RowAccounting;
+import io.crate.data.BatchIterator;
+import io.crate.data.Row;
+import io.crate.exceptions.CircuitBreakingException;
 import io.crate.execution.engine.sort.OrderingByPosition;
 import io.crate.expression.reference.doc.lucene.CollectorContext;
 import io.crate.expression.reference.doc.lucene.LuceneCollectorExpression;
 import io.crate.expression.reference.doc.lucene.OrderByCollectorExpression;
+import io.crate.metadata.Reference;
+import io.crate.test.integration.CrateUnitTest;
 import io.crate.testing.BatchIteratorTester;
+import io.crate.testing.TestingRowConsumer;
 import io.crate.types.DataTypes;
+import io.crate.types.LongType;
 import org.apache.lucene.analysis.standard.StandardAnalyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.NumericDocValuesField;
@@ -46,6 +54,8 @@ import org.apache.lucene.search.SortedNumericSortField;
 import org.apache.lucene.store.RAMDirectory;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.index.fielddata.IndexFieldDataService;
+import org.elasticsearch.common.breaker.CircuitBreaker;
+import org.elasticsearch.common.breaker.NoopCircuitBreaker;
 import org.elasticsearch.index.shard.ShardId;
 import org.junit.Before;
 import org.junit.Test;
@@ -58,9 +68,15 @@ import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
 import static io.crate.testing.TestingHelpers.createReference;
+import static org.mockito.Matchers.any;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 
-public class OrderedLuceneBatchIteratorFactoryTest {
+public class OrderedLuceneBatchIteratorFactoryTest extends CrateUnitTest {
+
+    private static final RowAccounting ROW_ACCOUNTING = new RowAccounting(Collections.singleton(LongType.INSTANCE),
+        new RamAccountingContext("dummy", new NoopCircuitBreaker(CircuitBreaker.FIELDDATA))
+    );
 
     private String columnName = "x";
     private Reference reference = createReference(columnName, DataTypes.LONG);
@@ -68,8 +84,8 @@ public class OrderedLuceneBatchIteratorFactoryTest {
     private IndexSearcher searcher2;
     private OrderBy orderBy;
     private List<Object[]> expectedResult;
-    private boolean[] reverseFlags = new boolean[] { true };
-    private Boolean[] nullsFirst = new Boolean[] { null };
+    private boolean[] reverseFlags = new boolean[]{true};
+    private Boolean[] nullsFirst = new Boolean[]{null};
 
     @Before
     public void prepareSearchers() throws Exception {
@@ -77,10 +93,10 @@ public class OrderedLuceneBatchIteratorFactoryTest {
         IndexWriter iw2 = new IndexWriter(new RAMDirectory(), new IndexWriterConfig(new StandardAnalyzer()));
 
         expectedResult = LongStream.range(0, 20)
-            .mapToObj(i -> new Object[] { i })
+            .mapToObj(i -> new Object[]{i})
             .collect(Collectors.toList());
         // expect descending order to differentiate between insert order
-        expectedResult.sort(Comparator.comparingLong((Object [] o) -> ((long) o[0])).reversed());
+        expectedResult.sort(Comparator.comparingLong((Object[] o) -> ((long) o[0])).reversed());
 
         for (int i = 0; i < 20; i++) {
             Document doc = new Document();
@@ -111,13 +127,59 @@ public class OrderedLuceneBatchIteratorFactoryTest {
                 LuceneOrderedDocCollector collector2 = createOrderedCollector(searcher2, 2);
                 return OrderedLuceneBatchIteratorFactory.newInstance(
                     Arrays.asList(collector1, collector2),
-                    OrderingByPosition.rowOrdering(new int[] { 0 }, reverseFlags, nullsFirst),
-                    MoreExecutors.directExecutor(),
+                    OrderingByPosition.rowOrdering(new int[]{0}, reverseFlags, nullsFirst),
+                    ROW_ACCOUNTING, MoreExecutors.directExecutor(),
                     true
                 );
             }
         );
         tester.verifyResultAndEdgeCaseBehaviour(expectedResult);
+    }
+
+    @Test
+    public void testSingleCollectorOrderedLuceneBatchIteratorTripsCircuitBreaker() throws Exception {
+        RowAccounting rowAccounting = mock(RowAccounting.class);
+        CircuitBreakingException circuitBreakingException = new CircuitBreakingException("tripped circuit breaker");
+        doThrow(circuitBreakingException)
+            .when(rowAccounting).accountForAndMaybeBreak(any(Row.class));
+
+        BatchIterator<Row> rowBatchIterator = OrderedLuceneBatchIteratorFactory.newInstance(
+            Arrays.asList(createOrderedCollector(searcher1, 1)),
+            OrderingByPosition.rowOrdering(new int[]{0}, reverseFlags, nullsFirst),
+            rowAccounting, MoreExecutors.directExecutor(),
+            true
+        );
+
+        consumeIteratorAndVerifyResultIsException(rowBatchIterator, circuitBreakingException);
+    }
+
+    @Test
+    public void testOrderedLuceneBatchIteratorWithMultipleCollectorsTripsCircuitBreaker() throws Exception {
+        RowAccounting rowAccounting = mock(RowAccounting.class);
+        CircuitBreakingException circuitBreakingException = new CircuitBreakingException("tripped circuit breaker");
+        doThrow(circuitBreakingException)
+            .when(rowAccounting).accountForAndMaybeBreak(any(Row.class));
+
+        LuceneOrderedDocCollector collector1 = createOrderedCollector(searcher1, 1);
+        LuceneOrderedDocCollector collector2 = createOrderedCollector(searcher2, 2);
+        BatchIterator<Row> rowBatchIterator = OrderedLuceneBatchIteratorFactory.newInstance(
+            Arrays.asList(collector1, collector2),
+            OrderingByPosition.rowOrdering(new int[]{0}, reverseFlags, nullsFirst),
+            rowAccounting, MoreExecutors.directExecutor(),
+            true
+        );
+
+        consumeIteratorAndVerifyResultIsException(rowBatchIterator, circuitBreakingException);
+    }
+
+    private void consumeIteratorAndVerifyResultIsException(BatchIterator<Row> rowBatchIterator, Exception exception)
+        throws Exception {
+        TestingRowConsumer consumer = new TestingRowConsumer();
+        consumer.accept(rowBatchIterator, null);
+
+        expectedException.expect(exception.getClass());
+        expectedException.expectMessage(exception.getMessage());
+        consumer.getResult();
     }
 
     private LuceneOrderedDocCollector createOrderedCollector(IndexSearcher searcher, int shardId) {
